--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="viewpager" />
+
+        <Button
+            android:id="@+id/bt_04"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="view_day_04" />
     </LinearLayout>
 
 </ScrollView>
