--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -34,4 +34,12 @@
         <attr name="originColor" format="color" />
         <attr name="changeColor" format="color" />
     </declare-styleable>
+    
+    <declare-styleable name="ProgressBarView">
+        <attr name="innerBackground" format="color"/>
+        <attr name="outerBackground" format="color"/>
+        <attr name="roundWidth" format="dimension"/>
+        <attr name="progressTextSize" format="dimension"/>
+        <attr name="progressTextColor" format="color"/>
+    </declare-styleable>
 </resources>
