--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="view_day_04" />
+
+        <Button
+            android:id="@+id/bt_05"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="view_day_05" />
+
+        <Button
+            android:id="@+id/bt_06"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="view_day_06" />
     </LinearLayout>
 
 </ScrollView>
