--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="view_day_06" />
+
+        <Button
+            android:id="@+id/bt_07"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="view_day_07" />
     </LinearLayout>
 
 </ScrollView>
