--- a/app/src/main/res/layout/activity_view_day07.xml
+++ b/app/src/main/res/layout/activity_view_day07.xml
@@ -7,6 +7,7 @@
     tools:context="com.kaifa.customview.activity.ViewDay07Activity">
 
     <com.kaifa.customview.widget.TagLayout
+        android:id="@+id/taglayout"
         android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
