--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -34,20 +34,32 @@
         <attr name="originColor" format="color" />
         <attr name="changeColor" format="color" />
     </declare-styleable>
-    
+
     <!--自定义progressbar-->
     <declare-styleable name="ProgressBarView">
-        <attr name="innerBackground" format="color"/>
-        <attr name="outerBackground" format="color"/>
-        <attr name="roundWidth" format="dimension"/>
-        <attr name="progressTextSize" format="dimension"/>
-        <attr name="progressTextColor" format="color"/>
+        <attr name="innerBackground" format="color" />
+        <attr name="outerBackground" format="color" />
+        <attr name="roundWidth" format="dimension" />
+        <attr name="progressTextSize" format="dimension" />
+        <attr name="progressTextColor" format="color" />
     </declare-styleable>
-    
+
     <!--自定义ratingbar-->
     <declare-styleable name="MyRatingBar">
-        <attr name="starNormal" format="reference"/>
-        <attr name="starFocus" format="reference"/>
-        <attr name="gradeNumber" format="integer"/>
+        <attr name="starNormal" format="reference" />
+        <attr name="starFocus" format="reference" />
+        <attr name="gradeNumber" format="integer" />
+    </declare-styleable>
+
+    <declare-styleable name="QQNaviView">
+        <attr name="bigIconSrc" format="reference" />
+        <attr name="smallIconSrc" format="reference" />
+        <attr name="iconWidth" format="dimension" />
+        <attr name="iconHeight" format="dimension" />
+        <attr name="range" format="float" />
+    </declare-styleable>
+
+    <declare-styleable name="SlidingMenu">
+        <attr name="rightPadding" format="dimension" />
     </declare-styleable>
 </resources>
