1.毛玻璃效果 2.仿bilibili搜索控件

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -62,4 +62,14 @@
     <declare-styleable name="SlidingMenu">
         <attr name="rightPadding" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="BlurView">
+        <attr name="blurRadius" format="integer"/>
+        <attr name="downsampleFactor" format="integer"/>
+        <attr name="overlayColor" format="color"/>
+    </declare-styleable>
+
+    <integer name="default_blur_radius">11</integer>
+    <integer name="default_downsample_factor">6</integer>
+    <color name="default_overlay_color">#99999999</color>
 </resources>
