--- a/app/src/main/res/layout/dialog_search.xml
+++ b/app/src/main/res/layout/dialog_search.xml
@@ -1,12 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_star_border_black_24dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -60,7 +60,6 @@
             android:id="@+id/tv_search_clean"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_star_border_black_24dp"
             android:gravity="center"
             android:padding="10dp"
             android:text="清空搜索记录"
