--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -131,6 +131,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="search" />
+                <Button
+                    android:id="@+id/md"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="md" />
+                <Button
+                    android:id="@+id/loading"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="loading" />
+                <Button
+                    android:id="@+id/qqtoolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="qqtoolbar" />
+
+                <Button
+                    android:id="@+id/behavior_main"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="behavior" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -201,6 +222,8 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
+
+
 
 
 </com.kaifa.customview.widget.SlidingMenu>
