--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="transparent">#0000</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
