--- a/app/src/main/res/layout/activity_view_day12.xml
+++ b/app/src/main/res/layout/activity_view_day12.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.kaifa.customview.activity.ViewDay12Activity">
 
-    <com.kaifa.customview.widget.refresh.RefreshLayout
-        android:id="@+id/refresh_main_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <!--<com.kaifa.customview.widget.refresh.RefreshLayout-->
+        <!--android:id="@+id/refresh_main_fragment"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
 
         <com.kaifa.customview.kotlin.LockPatternView
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </com.kaifa.customview.widget.refresh.RefreshLayout>
+    <!--</com.kaifa.customview.widget.refresh.RefreshLayout>-->
 
 </android.support.constraint.ConstraintLayout>
