1.酷狗是差动画 2.qq消息拖拽 3.花树直播点赞

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,6 +121,36 @@
                     android:text="view_day_12" />
 
                 <Button
+                    android:id="@+id/bt_13"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="view_day_13" />
+
+                <Button
+                    android:id="@+id/bt_14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="view_day_14" />
+
+                <Button
+                    android:id="@+id/bt_15"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="view_day_15" />
+
+                <Button
+                    android:id="@+id/bt_16"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="view_day_16" />
+
+                <Button
+                    android:id="@+id/bt_17"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="view_day_17" />
+
+                <Button
                     android:id="@+id/point"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -161,6 +191,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="RecycleView" />
+
+                <Button
+                    android:id="@+id/recycler_drag_main"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="RecycleViewDrag" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
