--- a/app/src/main/res/layout/ui_banner_layout.xml
+++ b/app/src/main/res/layout/ui_banner_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.hc.library.BannerViewPager
+    <com.kaifa.customview.banner.BannerViewPager
         android:id="@+id/banner_vp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
