--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -101,4 +101,12 @@
         <attr name="withProportion" format="float"/>
         <attr name="heightProportion" format="float"/>
     </declare-styleable>
+
+    <!-- X方向上的位移 -->
+    <attr name="translationXIn" format="float"/>
+    <attr name="translationXOut" format="float"/>
+
+    <!-- Y方向上的位移 -->
+    <attr name="translationYIn" format="float"/>
+    <attr name="translationYOut" format="float"/>
 </resources>
