--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="base_shallow_black">#818181</color>
+
     <color name="transparent">#0000</color>
     <color name="white">#FFFFFF</color>
 
